--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "mongodb": "^6.9.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^24.10.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "ts-node src/index.ts"
   }
 }
